Cleanup: add missed `final`, use toList(), fix naming etc