@@ -34,20 +34,22 @@ public class FileUtilTest {
         List<SearchCriteria> criteriaItems = fileUtil.loadSearchCriteria(TEST_PARAMS_FILE);
 
         assertThat("Wrong count of criteria items", criteriaItems.size(), is(2));
-        assertThat("Wrong url of first item", criteriaItems.get(0).getTopic(), is("txt-molitvy"));
-        assertThat("Wrong label of first item", criteriaItems.get(0).getUrl(), is("https://pravtor.ru/viewforum.php?f=184"));
-        assertThat("Wrong label of second item", criteriaItems.get(1).getTopic(), is("txt-kanony"));
-        assertThat("Wrong url of second item", criteriaItems.get(1).getUrl(), is("https://pravtor.ru/viewforum.php?f=183"));
+        var item0 = criteriaItems.get(0);
+        assertThat("Wrong url of first item", item0.getTopic(), is("txt-molitvy"));
+        assertThat("Wrong label of first item", item0.getUrl(), is("https://pravtor.ru/viewforum.php?f=184"));
+        var item1 = criteriaItems.get(1);
+        assertThat("Wrong label of second item", item1.getTopic(), is("txt-kanony"));
+        assertThat("Wrong url of second item", item1.getUrl(), is("https://pravtor.ru/viewforum.php?f=183"));
     }
 
     @Test
     public void writeIntoExcel() throws Exception {
-        List<BatchSearchResult> searchItems = Arrays.asList(
-                new BatchSearchResult("Sheet label", Arrays.asList(
+        List<BatchSearchResult> searchItems = List.of(
+                new BatchSearchResult("Sheet label", List.of(
                         buildTorrentData("label 1", 23, 12, 234, "23 Mb", "link1"),
                         buildTorrentData("label 2", 22, 2, 54, "13 Mb", "link2")
                 )),
-                new BatchSearchResult("Sheet label 2", Arrays.asList(
+                new BatchSearchResult("Sheet label 2", List.of(
                         buildTorrentData("label 3", 32, 3, 678, "55 Mb", "link3"),
                         buildTorrentData("label 4", 45, 5, 434, "22 Mb", "link4")
                 ))
@@ -55,8 +57,8 @@ public class FileUtilTest {
 
         fileUtil.writeIntoExcel(GENERATED_XLS_FILE, searchItems);
 
-        final XlsDataSet generated = new XlsDataSet(new FileInputStream(GENERATED_XLS_FILE));
-        final XlsDataSet expected = new XlsDataSet(new FileInputStream(EXPECTED_XLS_FILE));
+        XlsDataSet generated = new XlsDataSet(new FileInputStream(GENERATED_XLS_FILE));
+        XlsDataSet expected = new XlsDataSet(new FileInputStream(EXPECTED_XLS_FILE));
         assertEquals(generated, expected);
     }
 
